--- a/setup/docker-compose.yaml
+++ b/setup/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
       - "5432:5432"
     networks:
       - my_network
+  
   mt-mysql:
     build:
       dockerfile: Dockerfile-MySQL
@@ -19,6 +20,44 @@ services:
       - "3306:3306"
     networks:
       - my_network
+  
+  minio:
+    image: minio/minio:latest
+    container_name: minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - data:/data
+    environment:
+      - "MINIO_ROOT_USER=user"
+      - "MINIO_ROOT_PASSWORD=password"
+    command: server /data --console-address :9001
+  
+  createbucket:
+    image: minio/mc:latest
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+      /usr/bin/mc config host add --api s3v4 s3 http://minio:9000 user password;
+      /usr/bin/mc mb s3/static/;
+      /usr/bin/mc anonymous set download s3/static;
+      "
+  
+  s3_mock:
+    build:
+        dockerfile: DockerFile-MInIO
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
+    depends_on:
+      - minio
+      - createbucket
 
 networks:
   my_network:
+
+volumes:
+  data:
